# Ngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
App/: CMakeLists.txt
App/src/: main.cpp
Core/: CMakeLists.txt  info.plist
Core/src/: main.cpp
Engine/: CMakeLists.txt
Engine/include/Engine/: Engine.hpp
Engine/include/Window/: Window.h
Engine/src/: Engine.cpp  Window.cpp
